--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <script src="https://kit.fontawesome.com/109a8b14d9.js" crossorigin="anonymous"></script>
 <!-- 제이쿼리 -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.3/firebase-database.js"></script>
 </head>
 <body>
   <!-- 모달창 -->
