--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>대일노무법인</title>
+<!-- favicon -->
+<link rel="shortcut icon" href="/images/common/favicon.ico" type="image/x-icon">
 <!-- css -->
 <link rel="stylesheet" href="/css/common/default.css">
 <!-- js -->
