--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
   </div>
   <script type="text/javascript" src="/js/common/include.js"></script>
   <script>includeHTML();</script>
+  <script src="/js/home/main.js"></script>
 </body>
 </html>
